--- a/contacto.html
+++ b/contacto.html
@@ -31,19 +31,6 @@
                     <img src="images/logo.svg" alt="Logo del sitio">
                 </a>
 
-                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-                <button type="button" class="boton-menu hidden-md-up" data-toggle="collapse" data-target="#menu-principal" aria-expanded="false">
-                    <i class="fa fa-bars" aria-hidden="true"></i></button>
-
-                <form action="#" id="bloque-buscar" class="collapse">
-                    <div class="contenedor-bloque-buscar">
-                        <input type="text" placeholder="Buscar...">
-                        <input type="submit" value="Buscar">
-                    </div>
-                </form>
-
                 <nav id="menu-principal" class="collapse">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
@@ -68,22 +55,14 @@
         </div>
 
     </section>
-    <section class="ruta p-y-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-xs-right">
-                    <a href="index.html">Inicio</a> » Contacto
-
-                </div>
-            </div>
-        </div>
-    </section>
     <main class="p-y-1">
         <div class="container">
             <div class="row">
 
                 <div class="col-md-8">
-                    <h2 class="m-b-2">Pide Tu Asesoria Gratis</h2>
+                    <h2 class="m-b-2">Formulario de contacto</h2>
+
+
                     <form action="#">
 
                         <div class="form-group row">
@@ -102,14 +81,6 @@
                                 <input class="form-control" type="text" id="email" name="email" placeholder="Ingrese su email" data-toggle="tooltip" data-placement="top" title="Ingrese su email">
                             </div>
                         </div>
-
-                        <div class="form-group row">
-                                <label for="email" class="col-md-4 col-form-label">Telefono</label>
-    
-                                <div class="col-md-8">
-                                    <input class="form-control" type="text" id="email" name="email" placeholder="Ingrese su numero de celular" data-toggle="tooltip" data-placement="top" title="Ingrese su email">
-                                </div>
-                            </div>
 
 
                         <div class="form-group row">
@@ -148,15 +119,9 @@
                     </p>
                     <p>  
                         <b>Email:</b> contacto@transdigital.co <br>
-                        <b>Website:</b> https://transdigital.co/
                     </p>
 
                 </div>
-
-
-
-
-
             </div>
         </div>
     </main>
