--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="logoico.ico">
 
     <!-- Cargando fuentes-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic' rel='stylesheet' type='text/css'>
@@ -28,8 +28,21 @@
         <header class="encabezado navbar-fixed-top" role="banner" id="encabezado">
             <div class="container">
                 <a href="index.html" class="logo">
-                    <img src="images/logo.svg" alt="Logo del sitio">
+                    <img src="images/Logo6.png" style="width: 260px;" alt="Logo del sitio">
                 </a>
+
+                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">
+                    
+                </button>
+                <button type="button" class="boton-menu hidden-md-up" data-toggle="collapse" data-target="#menu-principal" aria-expanded="false">
+                    <i class="fa fa-bars" aria-hidden="true"></i></button>
+
+                <form action="#" id="bloque-buscar" class="collapse">
+                    <div class="contenedor-bloque-buscar">
+                        <input type="text" placeholder="Buscar...">
+                        <input type="submit" value="Buscar">
+                    </div>
+                </form>
 
                 <nav id="menu-principal" class="collapse">
                     <ul>
@@ -54,6 +67,16 @@
 
         </div>
 
+    </section>
+    <section class="ruta p-y-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-xs-right">
+                    <a href="index.html">Inicio</a> » Contacto
+
+                </div>
+            </div>
+        </div>
     </section>
     <main class="p-y-1">
         <div class="container">
@@ -106,22 +129,16 @@
 
                 </div>
                 <div class="col-md-4">
-                    <h3>CONTACTANOS</h3>
-                    <br>
-                    <p>
-                        <b>Dirección:</b>
-                        Cll 94 # 11-06, Bogotá,
-                        Colombia.
-                    </p>
-                    <p>        
-                        <b>Cel:</b> 350 3396861 <br>
-                        <b>Whatsapp:</b> 3103302118
-                    </p>
-                    <p>  
-                        <b>Email:</b> contacto@transdigital.co <br>
-                    </p>
+                    <h3>Detalles de contacto</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum commodi suscipit vitae eius perferendis consequuntur? Modi nihil aliquam, quas deserunt vitae atque suscipit ratione rerum eveniet. Qui, adipisci ad.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum commodi suscipit vitae eius perferendis consequuntur? Modi nihil aliquam, quas deserunt vitae atque suscipit ratione rerum eveniet. Qui, adipisci ad.</p>
 
                 </div>
+
+
+
+
+
             </div>
         </div>
     </main>
