--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>NETWORK | Soluciones Móbiles para empresas</title>
+    <title>ELCLANCODE</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="logoico.ico">
 
     <!-- Cargando fuentes -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic' rel='stylesheet' type='text/css'>
@@ -30,8 +30,21 @@
         <header class="encabezado navbar-fixed-top" role="banner" id="encabezado">
             <div class="container">
                 <a href="index.html" class="logo">
-                    <img src="images/logo.svg" alt="Logo del sitio">
+                    <img src="images/Logo6.png" style="width: 260px;" alt="Logo del sitio">
                 </a>
+
+                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">                    
+                </button>
+                <button type="button" class="boton-menu hidden-md-up" data-toggle="collapse" data-target="#menu-principal" aria-expanded="false">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
+
+                <form action="#" id="bloque-buscar" class="collapse">
+                    <div class="contenedor-bloque-buscar">
+                        <input type="text" placeholder="Buscar...">
+                        <input type="submit" value="Buscar">
+                    </div>
+                </form>
 
                 <nav id="menu-principal" class="collapse">
                     <ul>
@@ -157,18 +170,22 @@
                     <img src="images/servicio-1.svg" alt="Servicio Desarrollo de Aplicaciones Mobiles">
                     <h3><a href="#"> Desarrollo de Aplicaciones Mobiles </a></h3>
                     <p class="hidden-sm-down">Desarrollamos aplicaciones móviles y plataformas web. Nuestra principal cualidad está en el desarrollo de software a medida de tus necesidades.</p>
+                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
+
                 </article>
 
                 <article class="col-md-4 wow bounceInUp" data-wow-delay=".6s">
                     <img src="images/servicio-2.svg" alt="Servicio Consultoría Tecnológica">
                     <h3><a href="#">Consultoría Tecnológica</a></h3>
                     <p class="hidden-sm-down">Ofrecemos consultoría tecnológica especializada en movilidad, necesaria previo al desarrollo de cualquier proyecto.</p>
+                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
                 </article>
 
                 <article class="col-md-4 wow bounceInRight" data-wow-delay="1s">
                     <img src="images/servicio-3.svg" alt="Servicio Marketing y publicidad Movil">
                     <h3><a href="#">Marketing y publicidad Movil</a></h3>
                     <p class="hidden-sm-down">Desarrollamos campañas publicitarias para tus APP. Hacemos conocer tu marca en el momento exacto para conseguir un mayor inpacto.</p>
+                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
                 </article>
 
             </div>
@@ -217,7 +234,7 @@
     </section>
     <footer class="piedepagina p-y-1" role="contentinfo">
         <div class="container">
-            <p>2020 © ELCLANCODE Todos los derechos reservados</p>
+            <p>2016 © NETWORK Todos los derechos reservados</p>
             <ul class="redes-sociales">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"> </i>  </a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
