--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
 </head>
 
 <body class="paginas-internas">
-    <section class="bienvenidos">
+    <section class="portada-contacto">
 
         <header class="encabezado navbar-fixed-top" role="banner" id="encabezado">
             <div class="container">
@@ -47,7 +47,6 @@
                 <nav id="menu-principal" class="collapse">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li class="active"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -68,17 +67,7 @@
         </div>
 
     </section>
-    <section class="ruta p-y-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-xs-right">
-                    <a href="index.html">Inicio</a> » Contacto
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <main class="p-y-1">
+    <main class="p-y-1 estilo">
         <div class="container">
             <div class="row">
 
@@ -118,8 +107,8 @@
 
                         <div class="form-group row">
                             <div class="col-md-8 offset-md-4">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                                <button type="reset" class="btn btn-secondary">Limpiar</button>
+                                <button type="submit" class="btn btn-success">Enviar</button>
+                                <button type="reset" class="btn btn-warning">Limpiar</button>
                             </div>
                         </div>
                     </form>
@@ -130,15 +119,9 @@
                 </div>
                 <div class="col-md-4">
                     <h3>Detalles de contacto</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum commodi suscipit vitae eius perferendis consequuntur? Modi nihil aliquam, quas deserunt vitae atque suscipit ratione rerum eveniet. Qui, adipisci ad.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum commodi suscipit vitae eius perferendis consequuntur? Modi nihil aliquam, quas deserunt vitae atque suscipit ratione rerum eveniet. Qui, adipisci ad.</p>
-
+                    <p>Telefono: +57 304 4071414</p>
+                    <p>Correo electronico: info@elclancode.com</p>
                 </div>
-
-
-
-
-
             </div>
         </div>
     </main>
@@ -151,7 +134,7 @@
 
     <footer class="piedepagina p-y-1" role="contentinfo">
         <div class="container">
-            <p>2016 © NETWORK Todos los derechos reservados</p>
+            <p>2020 © ELCLANCODE Todos los derechos reservados</p>
             <ul class="redes-sociales">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"> </i>  </a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
