--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                 <nav id="menu-principal" class="collapse">
                     <ul>
                         <li class="active"><a href="index.html">Inicio</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -62,14 +61,11 @@
         <div class="texto-encabezado text-xs-center">
 
             <div class="container">
-                <h1 class="display-4 wow bounceIn">Diseño de APPS para empresas</h1>
-                <p class="wow bounceIn" data-wow-delay=".3s">Creamos aplicaciones según las necesidades y requerimientos de nuestros clientes.</p>
+                <h1 class="display-4 wow bounceIn">Diseño de paginas web</h1>
+                <p class="wow bounceIn" data-wow-delay=".3s">Creamos paginas web según las necesidades y requerimientos de nuestros clientes.</p>
                 <a href="contacto.html" class="btn btn-primary btn-lg">Ponte en contacto</a>
             </div>
 
-        </div>
-        <div class="flecha-bajar text-xs-center">
-            <a data-scroll href="#agencia"> <i class="fa fa-angle-down" aria-hidden="true"></i></a>
         </div>
 
     </section>
@@ -82,8 +78,12 @@
 
                 <div class="col-md-8 col-xl-9 wow bounceIn" data-wow-delay=".3s">
                     <h2 class="h3 text-xs-center text-md-left font-weight-bold">Agencia de programación de aplicaciones</h2>
-                    <p>NETWORK te asesora en el desarrollo y el diseño para que tu Aplicación Movil salga a la luz. Ponemos a tu disposición las mejores plataformas del mundo de las telecomunicaciones.</p>
-                    <p>Ponemos a tu alcance un servicio adaptado a tus necesidades, desde una consultoría integral con supervisión de todos y cada uno de los pasos que has de seguir para crear un negocio actual (comunicación, diseño corporativo, tecnologías...) a productos adaptados a metodologías ágiles de creación de apps diseñadas por nosotros y avaladas por nuestros años de experiencia.</p>
+                    <p>ELCLANCODE te asesora en el desarrollo y el diseño para que tu pagina web salga a la luz. 
+                        Ponemos a tu disposición las mejores plataformas del mundo de las telecomunicaciones.</p>
+                    <p>Ponemos a tu alcance un servicio adaptado a tus necesidades, desde una consultoría integral con 
+                        supervisión de todos y cada uno de los pasos que has de seguir para crear un negocio actual 
+                        (comunicación, diseño corporativo, tecnologías...) a productos adaptados a metodologías ágiles 
+                        de creación de apps diseñadas por nosotros y avaladas por nuestros años de experiencia.</p>
 
                 </div>
                 <div class="col-md-4 col-xl-3 wow bounceIn" data-wow-delay=".6s">
@@ -166,28 +166,19 @@
 
 
             <div class="row">
-                <article class="col-md-4 wow bounceInLeft" data-wow-delay=".3s">
+                <article class="col-md-6 wow bounceInLeft" data-wow-delay=".3s">
                     <img src="images/servicio-1.svg" alt="Servicio Desarrollo de Aplicaciones Mobiles">
-                    <h3><a href="#"> Desarrollo de Aplicaciones Mobiles </a></h3>
+                    <h3><a href="#"> Desarrollo de Aplicaciones Web </a></h3>
                     <p class="hidden-sm-down">Desarrollamos aplicaciones móviles y plataformas web. Nuestra principal cualidad está en el desarrollo de software a medida de tus necesidades.</p>
-                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
-
                 </article>
 
-                <article class="col-md-4 wow bounceInUp" data-wow-delay=".6s">
-                    <img src="images/servicio-2.svg" alt="Servicio Consultoría Tecnológica">
-                    <h3><a href="#">Consultoría Tecnológica</a></h3>
-                    <p class="hidden-sm-down">Ofrecemos consultoría tecnológica especializada en movilidad, necesaria previo al desarrollo de cualquier proyecto.</p>
-                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
-                </article>
-
-                <article class="col-md-4 wow bounceInRight" data-wow-delay="1s">
+                <article class="col-md-6 wow bounceInRight" data-wow-delay="1s">
                     <img src="images/servicio-3.svg" alt="Servicio Marketing y publicidad Movil">
-                    <h3><a href="#">Marketing y publicidad Movil</a></h3>
+                    <h3><a href="#">Community Manager</a></h3>
                     <p class="hidden-sm-down">Desarrollamos campañas publicitarias para tus APP. Hacemos conocer tu marca en el momento exacto para conseguir un mayor inpacto.</p>
-                    <a href="#" class="btn btn-secondary hidden-sm-down">Más información</a>
                 </article>
 
+                <a href="servicios.html" class="btn btn-secondary hidden-sm-down" style="position: relative; left: 490px;">Más información</a>
             </div>
         </div>
     </main>
@@ -234,7 +225,7 @@
     </section>
     <footer class="piedepagina p-y-1" role="contentinfo">
         <div class="container">
-            <p>2016 © NETWORK Todos los derechos reservados</p>
+            <p>2020 © ELCLANCODE Todos los derechos reservados</p>
             <ul class="redes-sociales">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"> </i>  </a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
