--- a/servicios.html
+++ b/servicios.html
@@ -31,11 +31,11 @@
                     <img src="images/Logo6.png" style="width: 260px;" alt="Logo del sitio">
                 </a>
 
-                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">
-                    
+                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">                    
                 </button>
                 <button type="button" class="boton-menu hidden-md-up" data-toggle="collapse" data-target="#menu-principal" aria-expanded="false">
-                    <i class="fa fa-bars" aria-hidden="true"></i></button>
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
 
                 <form action="#" id="bloque-buscar" class="collapse">
                     <div class="contenedor-bloque-buscar">
@@ -46,8 +46,8 @@
 
                 <nav id="menu-principal" class="collapse">
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li class="active"><a href="servicios.html">Servicios</a></li>
+                        <li class="active"><a href="index.html">Inicio</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -121,8 +121,6 @@
     </footer>
 
     <a data-scroll class="ir-arriba" href="#encabezado"><i class="fa  fa-arrow-circle-up" aria-hidden="true"> </i> </a>
-
-
 
 
     <!-- Modal 1  -->
